# navigate-at-scale

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build_docs.yaml  deploy.yml
_autosummary/: autonomous_robotic_sample_handling.controller.html  autonomous_robotic_sample_handling.controller.sub_controllers.html  autonomous_robotic_sample_handling.controller.sub_controllers.motor_controller.MotorController.html  autonomous_robotic_sample_handling.controller.sub_controllers.motor_controller.html  autonomous_robotic_sample_handling.controller.sub_controllers.robot_arm_controller.RobotArmController.html  autonomous_robotic_sample_handling.controller.sub_controllers.robot_arm_controller.html  autonomous_robotic_sample_handling.model.devices.html  autonomous_robotic_sample_handling.model.devices.motor.html  autonomous_robotic_sample_handling.model.devices.motor.synthetic_device.SyntheticRobotArm.html  autonomous_robotic_sample_handling.model.devices.motor.synthetic_device.html  autonomous_robotic_sample_handling.model.devices.robot_arm.html  autonomous_robotic_sample_handling.model.devices.robot_arm.robot_arm.RobotArm.html  autonomous_robotic_sample_handling.model.devices.robot_arm.robot_arm.html  autonomous_robotic_sample_handling.model.devices.robot_arm.synthetic_device.SyntheticRobotArm.html  autonomous_robotic_sample_handling.model.devices.robot_arm.synthetic_device.html  autonomous_robotic_sample_handling.model.features.example_feature.ExampleFeature.html  autonomous_robotic_sample_handling.model.features.example_feature.html  autonomous_robotic_sample_handling.model.features.html  autonomous_robotic_sample_handling.model.html  autonomous_robotic_sample_handling.view.frames.html  autonomous_robotic_sample_handling.view.html  autonomous_robotic_sample_handling.view.images.html  autonomous_robotic_sample_handling.view.popups.html
_sources/: index.rst.txt
_sources/_autosummary/: autonomous_robotic_sample_handling.controller.rst.txt  autonomous_robotic_sample_handling.controller.sub_controllers.motor_controller.MotorController.rst.txt  autonomous_robotic_sample_handling.controller.sub_controllers.motor_controller.rst.txt  autonomous_robotic_sample_handling.controller.sub_controllers.robot_arm_controller.RobotArmController.rst.txt  (+19 more)
_templates/: custom_class.html  custom_module.html
autonomous_robotic_sample_handling/: feature_list.py  main.py  plugin_acquisition_mode.py  plugin_config.yml
docs/: Makefile
plugins-template/: feature_list.py  plugin_acquisition_mode.py  plugin_config.yml
user_guide/: autonomous_routines.html  grippers.html  hardware_configuration.html  manual_tuning.html  plugin_architecture.html  sample_tray.html  vials_and_headers.html
(+224 files in other folders)
