[build-system]
requires = ["setuptools>=43.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "navigate-at-scale"
description = "A navigate plugin for high-throughput imaging with robotics."
authors = [{name = "The Dean Lab, UT Southwestern Medical Center"}]
readme = "README.md"
license = {file = "LICENSE.md"}
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
]

requires-python = ">=3.9.7"
dependencies = [
    'mecademicpy==2.1.0',
    'matplotlib-inline==0.1.3',
    'PyYAML==6.0',
    'pyserial==3.5',
    'PIPython==2.6.0.1',
    'fsspec==2022.8.2; sys_platform != "darwin"',
    'fsspec==2022.5.0; sys_platform == "darwin"',
    'pythonnet==3.0.3',
    ]

[project.scripts]
navigate-at-scale = "autonomous_robotic_sample_handling.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xvfb",
    "pytest-cov",
    "pre-commit",
    "ipykernel",
    "jupyterlab",
    ]

docs = [
    "numpydoc",
    "nbconvert",
    "sphinx<6.0.0",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "sphinx-issues",
    "sphinx-design",
    "pyyaml",
    "pydata_sphinx_theme==0.10.0rc2",
    "sphinx-toolbox"
]

[project.urls]
Source = "https://github.com/TheDeanLab/navigate-at-scale"

[tool.setuptools.dynamic]
version = {file = "navigate-at-scale/VERSION"}

[project.entry-points."navigate.plugins"]
navigate_at_plugin = "autonomous_robotic_sample_handling"

[tools.setuptools.package-data]
navigate_at_plugin_data = ["plugin_config.yml"]
